# lab-observability

./: .gitattributes  .gitignore  .gitmodules  README.md  compose.yaml
infra/: otel-collector-config.yaml
kotlin-app/: HELP.md  build.gradle  dockerfile
kotlin-app/src/main/kotlin/lab/observability/kotlin_app/: KotlinAppApplication.kt
kotlin-app/src/main/kotlin/lab/observability/kotlin_app/adapters/in/controller/: BaseController.kt  BaseResponse.kt
kotlin-app/src/main/resources/: application-local.yaml  application-prod.yaml  application.yaml
kotlin-app/src/test/kotlin/lab/observability/kotlin_app/: KotlinAppApplicationTests.kt
python-app/: .dockerignore  dockerfile  pyproject.toml
python-app/app/: __init__.py  instrumentation.py
